[package]
authors = ["raycar5 <raycar5@users.noreply.github.com>"]
description = "This crate provides better versions of common macros like println."
edition = "2018"
keywords = ["macro", "proc", "proc-macro", "security"]
license = "MIT"
name = "better-macro"
readme = "README.md"
repository = "https://github.com/raycar5/better-macro"
version = "1.0.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
